k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orixa
  labels:
    app.kubernetes.io/part-of: orixa
