k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orixa-admin-frontend
  namespace: orixa
  labels:
    app: orixa-admin-frontend
spec:
  type: ClusterIP
  selector:
    app: orixa-admin-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
